kyverno/block-delete-update-label/resource-fail.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-delete-update-label-fail
  labels:
    protected: "true"
spec:
  podSelector:
    matchLabels:
      networking/allow-internet-egress: "true"
  egress:
    - {}
  policyTypes:
    - Egress
