kyverno/block-delete-update-label/resource-pass.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-delete-update-label-pass
spec:
  podSelector:
    matchLabels:
      networking/allow-internet-egress: "true"
  egress:
    - {}
  policyTypes:
    - Egress
