kyverno/block-delete-update-label/variables.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
metadata:
  name: block-delete-update-label
globalValues:
  request.operation: DELETE
